--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 	<head>
-		<title> Student Bio </title> </head>
+		<title> Student Bio </title>
 		<link rel="stylesheet" href="./asset/css/style.css">
 	</head>
 	<body>
